<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context="br.com.banconeon.ui.activity.MainActivity">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:indeterminate="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/graphList"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:divider="@null"
        android:orientation="horizontal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/historylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/graphList"
        android:layout_marginTop="24dp"
        android:scrollbars="vertical" />

</RelativeLayout>