...
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/corn_buttom"
        android:text="ENVIAR DINHEIRO"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnHistorico"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/btnHistorico"
...
