<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/unlock_buttom">

    <ImageView
        android:id="@+id/img_thumb"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-8dp"
        android:contentDescription="@string/unlock_locked"
        android:src="@drawable/unlock_left" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-8dp"
        android:contentDescription="@string/unlock_unlocked"
        android:src="@drawable/unlock_right" />


</RelativeLayout>