...
                android:gravity="center_horizontal"
                android:text="Valor a enviar:"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/edtValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/corn_edittext"
                android:cursorVisible="false"
...
